@@ -6,6 +6,7 @@ Jump Start Changelog
 
 * Fixed bug with "Category" source selection for Post Slider not working correctly.
 * Made Google+ icons standards-compliant.
+* Added ability to hide Theme License admin page via `themeblvd_global_config` filter.
 
 1.0.2
 -----
